MB-58321: Set full stream name on Monotonic ActiveStream members

The full stream name will be logged when a "monotonic invariant failed"
exception is thrown, very useful at diagnostic on setups with many
connections and streams.

Change-Id: Ibef00cf549478b10b0b065a254e222f8a345482f
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/195719
Tested-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Well-Formed: Restriction Checker