engines/ep/src/dcp/active_stream.cc
@@ -117,8 +117,12 @@ ActiveStream::ActiveStream(EventuallyPersistentEngine* e,
         name_ += sid.to_string();
         logPrefix += " (" + sid.to_string() + ")";
     }
-    lastReadSeqno.setLabel("ActiveStream(" + vbucket.getId().to_string() +
-                           ")::lastReadSeqno");
+
+    const auto streamInfo =
+            "ActiveStream(" + name_ + " " + vbucket.getId().to_string() + ")";
+    lastReadSeqno.setLabel(streamInfo + "::lastReadSeqno");
+    lastSentSeqno.setLabel(streamInfo + "::lastSentSeqno");
+    nextSnapStart.setLabel(streamInfo + "::nextSnapStart");
 
     log(spdlog::level::info,
         "{} Creating {}stream with start seqno {} and end seqno {}; "
@@ -152,8 +156,6 @@ ActiveStream::ActiveStream(EventuallyPersistentEngine* e,
         itemsReady.store(true);
         // lock is released on leaving the scope
     }
-    auto streamInfo = "ActiveStream " + name_ + " " + logPrefix;
-    nextSnapStart.setLabel(streamInfo + " nextSnapStart");
 }
 
 ActiveStream::~ActiveStream() {
